# partner

./: .gitignore  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  agent.rs  conversation.rs  hook.rs  lib.rs  state.rs
crates/core/src/mcp/: manager.rs  mod.rs
crates/core/src/provider/: embedding.rs  mod.rs  openai.rs  rate_limiter.rs
crates/core/src/runtime/: agent_loop.rs  hooks.rs  mod.rs  selector.rs  tools.rs
crates/core/src/subagent/: mod.rs  registry.rs
crates/core/src/subagent/impls/: compactor.rs  mod.rs  skill_selector.rs
crates/core/src/tools/: builtins.rs  mod.rs  process.rs  registry.rs
crates/core/src/workspace/: instructions.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  event.rs  lib.rs  message.rs  rag.rs  skill.rs  storage.rs  tool.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  main.rs  platform.rs  runtime_bridge.rs  tray.rs
crates/ui/src/components/: message_view.rs  mod.rs  session_item.rs  title_bar.rs
memory/diary/: 2026-06-18.md
skills/coder/: SKILL.md
skills/reviewer/: SKILL.md
