[workspace]
resolver = "2"
members = ["crates/shared", "crates/core", "crates/ui"]
default-members = ["crates/ui"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dirs = "6"
