[package]
name = "ai-partner-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-partner-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-core = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
uuid = "1"
log = "0.4"
futures = "0.3"
