[package]
name = "ai-partner-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-partner-shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
log.workspace = true
futures.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-core = "0.3"
bytes = "1"
async-trait = "0.1"
