[package]
name = "ai-partner-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
log.workspace = true
rusqlite = { version = "0.35", features = ["bundled"] }
dirs.workspace = true
serde_yml = "0.0.12"
