[package]
name = "ai-partner-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-partner-shared = { path = "../shared" }
ai-partner-core = { path = "../core" }
iced = { version = "0.14", features = ["tokio", "image"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tray-icon = "0.24.1"
muda = "0.19.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging"] }
